src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>KPIs_Details__c</fullName>
        <label>KPIs Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPIs_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quantifiable metrics that matter most to company in the next 12 months.</inlineHelpText>
        <label>KPIs Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Static__c</fullName>
        <label>Lead Created Date (Static)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>A shorthand description, detailing the specific source of the Lead (i.e. Dreamforce 2014 Leads, &apos;Contact Us&apos; Web Form, etc.).</description>
        <inlineHelpText>A shorthand description, detailing the specific source of the Lead (i.e. Dreamforce 2014 Leads, &apos;Contact Us&apos; Web Form, etc.).</inlineHelpText>
        <label>Lead Source Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary contact for legal review</inlineHelpText>
        <label>Legal Contact Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Completed_Date__c</fullName>
        <label>Legal Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Review_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ongoing notes/feedback from legal review process</inlineHelpText>
        <label>Legal Review In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Notes__c</fullName>
        <label>Legal Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Started_Date__c</fullName>
        <label>Legal Review Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lost_Reason_Detail__c</fullName>
        <inlineHelpText>Include as much detail as possible as to why an opportunity was lost</inlineHelpText>
        <label>Lost Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Doesn’t Solve Pain</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Missing Key Functionality</fullName>
                </value>
                <value>
                    <fullName>Poor Data Quality</fullName>
                </value>
                <value>
                    <fullName>Economic Buyer Not Engaged</fullName>
                </value>
                <value>
                    <fullName>Priorities Changed</fullName>
                </value>
                <value>
                    <fullName>Went Dark</fullName>
                </value>
                <value>
                    <fullName>Timing - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Did Not Meet Qualification Criteria</fullName>
                </value>
                <value>
                    <fullName>Lost Champion</fullName>
                </value>
                <value>
                    <fullName>Poor Service and Support Quality</fullName>
                </value>
                <value>
                    <fullName>Advocate Gone</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Initial Meeting No-Show</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Poor Qualification</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Product Gaps</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Focus_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;VSMB (1-24)&quot;), 2, 
 IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;SMB (25-99)&quot;), 4, 
  IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;Mid-Market (100-999)&quot;), 3, 
   IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;Small Enterprise (1,000-4,999)&quot;), 3,
    IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;Mid Enterprise (5,000-9,999)&quot;), 2,
    IF(ISPICKVAL(Market_Focus_Qualification_AE__c, &quot;Large Enterprise (10,000+)&quot;), 1, null
    )
   )
  )
 )
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Focus Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Focus_Qualification_AE__c</fullName>
        <label>Market Focus Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VSMB (1-24)</fullName>
                </value>
                <value>
                    <fullName>SMB (25-99)</fullName>
                </value>
                <value>
                    <fullName>Mid-Market (100-999)</fullName>
                </value>
                <value>
                    <fullName>Small Enterprise (1,000-4,999)</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise (5,000-9,999)</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise (10,000+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market_Focus_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;VSMB (1-24)&quot;), 2, 
 IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;SMB (25-99)&quot;), 4, 
  IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;Mid-Market (100-999)&quot;), 3, 
   IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;Small Enterprise (1,000-4,999)&quot;), 3,
    IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;Mid Enterprise (5,000-9,999)&quot;), 2,
    IF(ISPICKVAL(Market_Focus_Qualification_SDR__c, &quot;Large Enterprise (10,000+)&quot;), 1, null
    )
   )
  )
 )
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Focus Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Focus_Qualification_SDR__c</fullName>
        <label>Market Focus Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VSMB (1-24)</fullName>
                </value>
                <value>
                    <fullName>SMB (25-99)</fullName>
                </value>
                <value>
                    <fullName>Mid-Market (100-999)</fullName>
                </value>
                <value>
                    <fullName>Small Enterprise (1,000-4,999)</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise (5,000-9,999)</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise (10,000+)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metrics_Score__c</fullName>
        <formula>IF( KPIs_Identified__c =TRUE,1,0)+IF(  Impact_of_Solution_on_KPIs_Determined__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Metrics Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Activity_Date__c</fullName>
        <label>Next Scheduled Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Activity_Details__c</fullName>
        <label>Next Scheduled Activity Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Financial_Terms_Details__c</fullName>
        <inlineHelpText>Required detail field for any contract with non-standard financial terms</inlineHelpText>
        <label>Non-Standard Financial Terms Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Financial_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is payment schedule unique, distribution of payments uneven (e.g. more up front, less towards end), or financial structure of contract otherwise non-standard?</inlineHelpText>
        <label>Non-Standard Financial Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Contacts_Roles_Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Number of Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onboarding_Contact_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary contact for onboarding</inlineHelpText>
        <label>Onboarding Contact Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Days__c</fullName>
        <description>How long is the opportunity alive</description>
        <formula>CloseDate - Datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is also referred to as Sales Cycle in the Node ROI reports</inlineHelpText>
        <label>Opportunity Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Inbound_Outbound__c</fullName>
        <label>Lead Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>SDR Outbound</fullName>
                </value>
                <value>
                    <fullName>AE Outbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Notes__c</fullName>
        <description>Include information such as: Who are the buyers, what are their business needs, what do they sell and to whom, what is their ICP, what are deal risks, what is timeframe, who are we competing with, etc</description>
        <label>Opportunity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Was this brought in via a Partner?</description>
        <label>Opportunity Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Expiration_Date__c</fullName>
        <description>Date on which paid eval, opt-out, etc, ends</description>
        <label>Opt-Out Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Guaranteed_Amount__c</fullName>
        <label>Opt-Out Guaranteed Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Term_Length_months__c</fullName>
        <formula>(Year( Opt_Out_Expiration_Date__c ) - Year( Contract_Start_Date__c ))*12 + Month(  Opt_Out_Expiration_Date__c ) - Month( Contract_Start_Date__c )</formula>
        <label>Opt-Out Term Length (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Trigger_Reason_Detail__c</fullName>
        <label>Opt-Out Trigger Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opt_Out_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did client choose to opt out of contract</description>
        <label>Opt-Out Triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_Details__c</fullName>
        <label>Pain Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pain_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specific and quantifiable pain points that will drive the decision to buy or not</inlineHelpText>
        <label>Pain Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pain_Score__c</fullName>
        <formula>IF( Pain_Identified__c =TRUE,1,0)+IF( Impact_of_Unresolved_Pain_Determined__c  =TRUE,1,0)+IF( Compelling_Event_Identified__c  =TRUE,1,0)+IF( KPIs_Identified__c  =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pain Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pain_and_Solution_Qualif_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Pain_and_Solution_Qualification_AE__c, &quot;Quantifiable painpoints that Node solves&quot;), 4, 
    IF(ISPICKVAL(Pain_and_Solution_Qualification_AE__c, &quot;No quantifiable painpoints or Node isn&apos;t right solution&quot;), 1, null
    )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pain and Solution Qualif AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pain_and_Solution_Qualif_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Pain_and_Solution_Qualification_SDR__c, &quot;Quantifiable painpoints that Node solves&quot;), 4, 
    IF(ISPICKVAL(Pain_and_Solution_Qualification_SDR__c, &quot;No quantifiable painpoints or Node isn&apos;t right solution&quot;), 1, null
    )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pain and Solution Qualif SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pain_and_Solution_Qualification_AE__c</fullName>
        <label>Pain and Solution Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantifiable painpoints that Node solves</fullName>
                </value>
                <value>
                    <fullName>No quantifiable painpoints or Node isn&apos;t right solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pain_and_Solution_Qualification_SDR__c</fullName>
        <label>Pain and Solution Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantifiable painpoints that Node solves</fullName>
                </value>
                <value>
                    <fullName>No quantifiable painpoints or Node isn&apos;t right solution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Political_Criteria_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Political/personal criteria (e.g. buyer is wary of startups) that will impact buying decision</inlineHelpText>
        <label>Political Criteria Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Political_Criteria_Details__c</fullName>
        <label>Political Criteria Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Potential_Blockers__c</fullName>
        <label>Potential Blockers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Completed_Date__c</fullName>
        <label>Proof of Concept Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proof of Concept Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Details__c</fullName>
        <label>Proof of Concept Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ongoing notes/feedback/summary of proof of concept</inlineHelpText>
        <label>Proof of Concept In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Requirements_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>List of success criteria and step-by-step process for proof of concept</inlineHelpText>
        <label>Proof of Concept Requirements Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Requirements_Details__c</fullName>
        <label>Proof of Concept Requirements Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proof_of_Concept_Started_Date__c</fullName>
        <label>Proof of Concept Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proof_of_Life_Score__c</fullName>
        <formula>IF( Why_Change_Now__c =TRUE,1,0)+IF(  Why_Us__c =TRUE,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proof of Life Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Requirements_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>List of requirements for the proposal as defined by buyer or champion</inlineHelpText>
        <label>Proposal Requirements Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Requirements_Details__c</fullName>
        <label>Proposal Requirements Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_Completed_Date__c</fullName>
        <label>Proposal Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_Details__c</fullName>
        <label>Proposal Review Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Review_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ongoing notes/feedback/summary of proposal review process (including proposal meeting)</inlineHelpText>
        <label>Proposal Review In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_AE_Score__c</fullName>
        <formula>Seniority_Qualification_AE_Score__c + Employee_Size_Qualification_AE_Score__c + Revenue_Acq_Qualification_AE_Score__c + Market_Focus_Qualification_AE_Score__c + Industry_Focus_Qualification_AE_Score__c + Pain_and_Solution_Qualif_AE_Score__c + Timing_Qualification_AE_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Notes_AE__c</fullName>
        <label>Qualification Notes - AE</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualification_Notes_SDR__c</fullName>
        <inlineHelpText>Notes from any pre-opportunity qualification calls</inlineHelpText>
        <label>Qualification Notes - SDR</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualification_SDR_Score__c</fullName>
        <formula>Seniority_Qualification_SDR_Score__c + Employee_Size_Qualification_SDR_Score__c + Revenue_Acq_Qualification_SDR_Score__c + Market_Focus_Qualification_SDR_Score__c + Industry_Focus_Qualification_SDR_Score__c + Pain_and_Solution_Qualif_SDR_Score__c + Timing_Qualification_SDR_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Score_AE__c</fullName>
        <label>Qualification Score - AE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Score_SDR__c</fullName>
        <label>Qualification Score - SDR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Acq_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Revenue_Acquisition_Qualification_AE__c, &quot;C- Level&quot;), 4, 
 IF(ISPICKVAL(Revenue_Acquisition_Qualification_AE__c, &quot;VP&quot;), 3, 
    IF(ISPICKVAL(Revenue_Acquisition_Qualification_AE__c, &quot;Individual Contributor&quot;), 1, null
    )
   )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Acq Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Acq_Qualification_SDR_Score__c</fullName>
        <formula>IF(ISPICKVAL(Revenue_Acquisition_Qualification_SDR__c, &quot;C- Level&quot;), 4, 
 IF(ISPICKVAL(Revenue_Acquisition_Qualification_SDR__c, &quot;VP&quot;), 3, 
    IF(ISPICKVAL(Revenue_Acquisition_Qualification_SDR__c, &quot;Individual Contributor&quot;), 1, null
    )
   )
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Acq Qualification SDR Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Acquisition_Qualification_AE__c</fullName>
        <label>Revenue Acquisition Qualification - AE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both Marketing and Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
                <value>
                    <fullName>Marketing Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Acquisition_Qualification_SDR__c</fullName>
        <label>Revenue Acquisition Qualification - SDR</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both Marketing and Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Only</fullName>
                </value>
                <value>
                    <fullName>Marketing Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_AE__c</fullName>
        <formula>Account.Round_Robin_Account_AE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sales Development to use this field to determine which AE to assign to which Opportunity. If AE sourced opportunity, then AE should own opportunity and ignore this field.</inlineHelpText>
        <label>Round Robin AE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>MOD(VALUE( Opportunity_Number__c ) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <inlineHelpText>The source from which the prospect came to submit their contact information (as determined by Primary Lead Source).</inlineHelpText>
        <label>Secondary Lead Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Organic</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Ads</fullName>
                </value>
                <value>
                    <fullName>Facebook Ads</fullName>
                </value>
                <value>
                    <fullName>Google AdWords</fullName>
                </value>
                <value>
                    <fullName>Website Referral</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Node</fullName>
                </value>
                <value>
                    <fullName>List Purchase</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Navigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Lost_Reason__c</fullName>
        <label>Secondary Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advocate Gone</fullName>
                </value>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>Missing Feature</fullName>
                </value>
                <value>
                    <fullName>Poor Qualification</fullName>
                </value>
                <value>
                    <fullName>Priorities Changed</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Completed_Date__c</fullName>
        <label>Security Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Contact_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Primary contact for security review</inlineHelpText>
        <label>Security Contact Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Security_Review_Details__c</fullName>
        <label>Security Review Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Review_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ongoing notes/feedback from security review process</inlineHelpText>
        <label>Security Review In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seniority_Qualification_AE_Score__c</fullName>
        <formula>IF(ISPICKVAL(Seniority_Qualification_AE__c, &quot;C- Level&quot;), 4, 
 IF(ISPICKVAL(Seniority_Qualification_AE__c, &quot;VP&quot;), 4, 
  IF(ISPICKVAL(Seniority_Qualification_AE__c, &quot;Director&quot;), 3, 
   IF(ISPICKVAL(Seniority_Qualification_AE__c, &quot;Manager&quot;), 2, 
    IF(ISPICKVAL(Seniority_Qualification_AE__c, &quot;Individual Contributor&quot;), 1, null
    )
   )
  )
 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seniority Qualification AE Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>